--- a/factorial.html
+++ b/factorial.html
@@ -13,12 +13,21 @@
             grid-gap: 1rem;
             height: 100vh;
         }
+        p{
+            font-size: 1.5rem;
+        }
+        input,button{
+            padding: 10px;
+            font-size: 1rem;
+        }
+        button{
+            cursor: pointer;
+        }
 
     </style>
 </head>
 <body>
-    <label for="">Enter the Number:</label>
-    <input type="number" id="num">
+    <input type="number" id="num" placeholder="Enter the Number...">
     <button onclick="call()">submit</button>
     <input type="text" name="" id="ans">
     <!-- <p id="ans"></p> -->
@@ -27,13 +36,20 @@
 
         //const ans = document.getElementById("ans");
         function call(){
-            const num = document.getElementById("num").value;
+            const num = document.getElementById("num");
+            num.value;
             let x =1;
             for(let i=1; i<=num;i++){
                 x = x * i;
             }
             ans.value = x;            
             document.getElementById("ans").value = x;
+
+            setTimeout(()=>{
+                num.value = "";
+                ans.value = "";
+            },5000);
+
         }
 
     </script>
