--- a/factorial.html
+++ b/factorial.html
@@ -39,7 +39,7 @@
             const num = document.getElementById("num");
             num.value;
             let x =1;
-            for(let i=1; i<=num;i++){
+            for(let i=1; i<=num.value;i++){
                 x = x * i;
             }
             ans.value = x;            
