--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <a href="evenodd.html" target="_blank">Even Or Odd</a>
     <a href="factorial.html" target="_blank">factorial</a>
     <a href="factors.html" target="_blank">factors</a>
+    <a href="dateformate.html" target="_blank">Date formate</a>
 
 </body>
 </html>
