--- a/evenodd.html
+++ b/evenodd.html
@@ -28,7 +28,7 @@
             font-weight: bold;
         }
         input[type="number"] {
-            -moz-appearance: textfield; /* Firefox */
+            -moz-appearance: textfield;
         }
       
           input[type="number"]::-webkit-inner-spin-button,
