--- a/factors.html
+++ b/factors.html
@@ -18,22 +18,47 @@
             font-size: 1.5rem;
         }
         input,button{
-            padding: 10px;
             font-size: 1rem;
         }
         button{
             cursor: pointer;
         }
+        button{
+            cursor: pointer;
+            padding: 10px;
+            background-color: rgb(255, 47, 47);
+            border: none;
+            padding: 5px 10px;
+            font-size: 1.1rem;
+            cursor: pointer;
+            color: #fff;
+        }
+        button:hover{
+            background-color: rgb(221, 55, 55);
+        } 
+        input[type="number"] {
+            -moz-appearance: textfield;
+        }
+        input{
+            border-top: none;
+            border-right: none;
+            border-left: none;
+            outline: none;
+            background: none;
+        }
+          input[type="number"]::-webkit-inner-spin-button,
+          input[type="number"]::-webkit-outer-spin-button {
+            -webkit-appearance: none; /* WebKit browsers */
+        }
     </style>
 </head>
 <body>
-    
+    <h1>Finding factors...</h1>
     <input type="number" id="val" placeholder="Enter the number">
     <button onclick="call()">Submit</button>
     <p id="ans"></p>
 
     <script>
-
         function call(){
             val = document.getElementById("val");
             ans = document.getElementById("ans");
@@ -42,11 +67,6 @@
                     ans.innerHTML += i +",";
                 }
             }
-
-            setTimeout(()=>{
-                val.value = ""
-                ans.innerHTML = "";
-            },5000);
         }
 
     </script>
