--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 <body>
-    
+    <a href="google.com" target="_blank">jay's inclusion</a>
     <a href="evenodd.html" target="_blank">Even Or Odd</a>
     <a href="factorial.html" target="_blank">factorial</a>
     <a href="factors.html" target="_blank">factors</a>
