--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             margin: 0 auto;
             width: 100%;
             height: 100vh;
+            flex-direction: column;
         }
         a{
             margin: 10px;
@@ -27,7 +28,6 @@
     </style>
 </head>
 <body>
-    <a href="google.com" target="_blank">jay's inclusion</a>
     <a href="evenodd.html" target="_blank">Even Or Odd</a>
     <a href="factorial.html" target="_blank">factorial</a>
     <a href="factors.html" target="_blank">factors</a>
