--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        body{
+        body,.btn{
             display: flex;
             justify-content: center;
             align-items: center;
             margin: 0 auto;
-            width: 100%;
+            width: 100px;
             height: 100vh;
             flex-direction: column;
         }
@@ -21,17 +21,22 @@
             color: #fff;
             padding: 10px;
             background-color: rgb(72, 69, 238);
+            width: 100%;
+            text-align: center;
+            font-family: sans-serif;
         }
         a:hover{
             background-color: rgb(29, 27, 163);
-        }
+        }   
     </style>
 </head>
 <body>
-    <a href="evenodd.html" target="_blank">Even Or Odd</a>
-    <a href="factorial.html" target="_blank">factorial</a>
-    <a href="factors.html" target="_blank">factors</a>
-    <a href="dateformate.html" target="_blank">Date formate</a>
+    <div class="btn">
+        <a href="evenodd.html" target="_blank">Even Or Odd</a>
+        <a href="factorial.html" target="_blank">factorial</a>
+        <a href="factors.html" target="_blank">factors</a>
+        <a href="dateformate.html" target="_blank">Date formate</a>
+    </div>
 
 </body>
 </html>
