--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <a href="factorial.html" target="_blank">factorial</a>
         <a href="factors.html" target="_blank">factors</a>
         <a href="dateformate.html" target="_blank">Date formate</a>
+        <a href="largest.html" target="_blank">Largest Number</a>
     </div>
 
 </body>
