--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <a href="factors.html" target="_blank">factors</a>
         <a href="dateformate.html" target="_blank">Date formate</a>
         <a href="largest.html" target="_blank">Largest Number</a>
+        <a href="palindrome.html" target="_blank">Palindrome</a>
     </div>
 
 </body>
