--- a/palindrome.html
+++ b/palindrome.html
@@ -16,6 +16,7 @@
             align-items: center;
             width: 100%;
             height: 100vh;
+            background-color: rgb(122, 122, 233);
         }
         input{
             padding: 10px 5px;
@@ -54,18 +55,22 @@
             width: 600px;
             margin: 0 auto;
             padding: 5rem;
-            border: 2px solid gray;
+            border: 2px solid #000;
         }
         h2{
             color: #000;
             margin-bottom: 1rem;
             text-align: center;
         }
+        span{
+            color: red;
+            font-weight: 700;
+        }
     </style>
 </head>
 <body class="flex">
     <div class="main_container">
-        <h2>Checking number is Palindrome or nor</h2>
+        <h2>Checking number is Palindrome or nor <span>>></span></h2>
         <div class="container">
             <input type="number" placeholder="Enter the Number..." id="num">
             <input type="submit" class="btn"  onclick="call()" value="Submit">
