--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <a href="dateformate.html" target="_blank">Date formate</a>
         <a href="largest.html" target="_blank">Largest Number</a>
         <a href="palindrome.html" target="_blank">Palindrome</a>
+        <a href="armstrong.html" target="_blank">Armstrong </a>
     </div>
 
 </body>
