--- a/factorial.html
+++ b/factorial.html
@@ -4,50 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            gap: 2rem;
-            height: 100vh;
-        }
-        p{
-            font-size: 1.5rem;
-        }
-        input,button{
-            font-size: 1rem;
-        }
-        input[type="number"] {
-            -moz-appearance: textfield;
-        }
-        input{
-            border-top: none;
-            border-right: none;
-            border-left: none;
-            outline: none;
-            background: none;
-        }
-          input[type="number"]::-webkit-inner-spin-button,
-          input[type="number"]::-webkit-outer-spin-button {
-            -webkit-appearance: none; /* WebKit browsers */
-        }
-        button{
-            cursor: pointer;
-            padding: 10px;
-            background-color: rgb(255, 47, 47);
-            border: none;
-            padding: 5px 10px;
-            font-size: 1.1rem;
-            cursor: pointer;
-            color: #fff;
-        }
-        button:hover{
-            background-color: rgb(221, 55, 55);
-        } 
+    <link rel="stylesheet" href="css/factorial.css">
 
-    </style>
 </head>
 <body>
     <h1>Find factorial Number...</h1>
