--- a/armstrong.html
+++ b/armstrong.html
@@ -4,69 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Armstrong</title>
-    <style>
-        *{
-            margin: 0;
-            padding: 0;
-            font-family: sans-serif;
-        }
-        .body,.flex{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            height: 100vh;
-            background-color: rgb(183, 183, 233);
-        }
-        input{
-            padding: 10px 5px;
-            width: 100%;
-        }
-        .container{
-            display: flex;
-            width: 300px;
-            margin: 0 auto;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            row-gap: 1rem;
-        }
-        .btn{
-            border: none;
-            width: 100px;
-            background-color: blue;
-            color: #fff;
-            border: 2px solid blue;
-            cursor: pointer;
-        }
-        .btn:hover{
-            border: 2px solid blue;
-            background-color: transparent;
-            cursor: pointer;
-            color: #000;
-        }
-        p{
-            color: #000;
-            font-weight: 700;
-            font-size: 1.5rem; 
-            border-bottom: 2px solid black;
-        }
-        .main_container{
-            width: 600px;
-            margin: 0 auto;
-            padding: 5rem;
-            border: 2px solid #000;
-        }
-        h2{
-            color: #000;
-            margin-bottom: 1rem;
-            text-align: center;
-        }
-        span{
-            color: red;
-            font-weight: 700;
-        }
-    </style>
+    <link rel="stylesheet" href="css/armstrong.css">
 </head>
 <body class="flex">
     <div class="main_container">
