--- a/index.html
+++ b/index.html
@@ -4,31 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Js Program</title>
-    <style>
-        body,.btn{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 0 auto;
-            width: 100px;
-            height: 100vh;
-            flex-direction: column;
-        }
-        a{
-            margin: 10px;
-            text-decoration: none;
-            border: 1px solid #000;
-            color: #fff;
-            padding: 10px;
-            background-color: rgb(72, 69, 238);
-            width: 100%;
-            text-align: center;
-            font-family: sans-serif;
-        }
-        a:hover{
-            background-color: rgb(29, 27, 163);
-        }   
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="btn">
