--- a/largest.html
+++ b/largest.html
@@ -4,57 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Largest Number</title>
-    <style>
-        *{
-            margin: 0;
-            padding: 0;
-            font-family: sans-serif;
-        }
-        .body{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            height: 100vh;
-        }
-        input{
-            padding: 10px 5px;
-            width: 100%;
-        }
-        .container{
-            display: flex;
-            width: 300px;
-            margin: 0 auto;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            row-gap: 1rem;
-            height: 100vh;
-        }
-        .btn{
-            border: none;
-            width: 100px;
-            background-color: blue;
-            color: #fff;
-            border: 2px solid blue;
-            cursor: pointer;
-        }
-        .btn:hover{
-            border: 2px solid blue;
-            background-color: transparent;
-            cursor: pointer;
-            color: #000;
-        }
-        p{
-            color: #000;
-            font-weight: 700;
-            font-size: 1.5rem;
-            border-bottom: 2px solid black;
-        }
-    </style>
+    <link rel="stylesheet" href="css/largest.css">
 </head>
 <body>
     <div class="container">
+        <h2>Finding Largest Number</h2>
         <input type="number" placeholder="Enter First Number..." id="val1">
         <input type="number" placeholder="Enter Second Number..." id="val2">
         <input type="number" placeholder="Enter Third Number..." id="val3">
