--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="largest.html" target="_blank">Largest Number</a>
         <a href="palindrome.html" target="_blank">Palindrome</a>
         <a href="armstrong.html" target="_blank">Armstrong </a>
+        <a href="js_api/index.html" target="_blank">Call API </a>
     </div>
 
 </body>
