--- a/js_api/index.html
+++ b/js_api/index.html
@@ -5,20 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Call Api</title>
     <style>
-
+        .container{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            width: 50%;
+            height: 100vh;
+            margin: 0 auto;
+        }
+        input{
+            width: 100%;
+            padding: 10px 10px;
+            margin-bottom: 15px;
+            outline: none;
+        }
+        button{
+            padding :5px 10px;
+            font-size: 1rem;
+        }
+        .container_two,.container_one{
+            width: 100%;
+        }
+        .text{
+            font-size: 1.5rem;
+            margin: 1.2rem 0;
+        }
     </style>
 </head>
 <body>
     
-    <div>
-        <input type="text" placeholder="Enter Your city" name="" id="city_input">
-        <button id="search_btn">Search</button>
-    </div>
-
-    <div>
-        <h3 id="city-name">Canada, Ontario - Toronto</h3>
-        <h6 id="city-time">localtime</h6>
-        <p id="city-temp">3</p>
+    <div class="container">
+        <div class="container_one">
+            <input type="text" placeholder="Enter Your city" name="" id="city_input">
+            <button id="search_btn">Search</button>
+        </div>
+    
+        <div class="container_two">
+            <h3 class="text" id="city-name">Canada, Ontario - Toronto</h3>
+            <h6 class="text" id="city-time">localtime</h6>
+            <p class="text" id="city-temp">3</p>
+        </div>
     </div>
 
 
@@ -41,7 +68,7 @@
             const value = input.value
             const result = await getData(value);
             console.log(result);
-            cityName.innerText = `${result.location.name}, ${result.location.region} - ${result.location.contry}`
+            cityName.innerText = `${result.location.name}, ${result.location.region} - ${result.location.country}`
             cityTime.innerText = `${result.location.localtime}`
             cityTemp.innerText = `${result.current.temp_c}`
         })
