--- a/js_api/index.html
+++ b/js_api/index.html
@@ -31,12 +31,18 @@
             font-size: 1.5rem;
             margin: 1.2rem 0;
         }
+        span{
+            color: red;
+            font-weight: 700;
+            font-weight: bolder;
+        }
     </style>
 </head>
 <body>
     
     <div class="container">
         <div class="container_one">
+            <h2>Enter City Name For Api Calling <span>>></span></h2>
             <input type="text" placeholder="Enter Your city" name="" id="city_input">
             <button id="search_btn">Search</button>
         </div>
