--- a/js_api/index.html
+++ b/js_api/index.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Call Api</title>
     <style>
+        body{
+            background-color: #000;
+        }
         .container{
             display: flex;
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            width: 50%;
+            width: 90%;
             height: 100vh;
             margin: 0 auto;
         }
@@ -28,7 +31,6 @@
             width: 100%;
         }
         .text{
-            font-size: 1.5rem;
             margin: 1.2rem 0;
         }
         span{
