--- a/js_api/index.html
+++ b/js_api/index.html
@@ -30,8 +30,9 @@
         .container_two,.container_one{
             width: 100%;
         }
-        .text{
+        .text,h2{
             margin: 1.2rem 0;
+            color: #fff;
         }
         span{
             color: red;
