--- a/js_api/index.html
+++ b/js_api/index.html
@@ -26,6 +26,7 @@
         button{
             padding :5px 10px;
             font-size: 1rem;
+            cursor: pointer;
         }
         .container_two,.container_one{
             width: 100%;
