--- a/basic/dateformate.html
+++ b/basic/dateformate.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Date Formate</title>
-    <link rel="stylesheet" href="css/dateformate.css">
+    <link rel="stylesheet" href="basic_css/dateformate.css">
 </head>
 <body>
     
