--- a/basic/evenodd.html
+++ b/basic/evenodd.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Even & Odd</title>
-    <link rel="stylesheet" href="css/evenodd.css">
+    <link rel="stylesheet" href="basic_css/evenodd.css">
 </head>
 <body>
     <h1>Checking number is even or not...</h1>
