--- a/basic/factors.html
+++ b/basic/factors.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>factors</title>
-    <link rel="stylesheet" href="css/factors.css">
+    <link rel="stylesheet" href="basic_css/factors.css">
 </head>
 <body>
     <h1>Finding factors...</h1>
