--- a/basic/largest.html
+++ b/basic/largest.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Largest Number</title>
-    <link rel="stylesheet" href="css/largest.css">
+    <link rel="stylesheet" href="basic_css/largest.css">
 </head>
 <body>
     <div class="container">
