--- a/basic/palindrome.html
+++ b/basic/palindrome.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Palindrome</title>
-    <link rel="stylesheet" href="css/palindrome.css">
+    <link rel="stylesheet" href="basic_css/palindrome.css">
 </head>
 <body class="flex">
     <div class="main_container">
