--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
 </head>
 <body>
     <div class="btn">
-        <a href="evenodd.html" target="_blank">Even Or Odd</a>
-        <a href="factorial.html" target="_blank">factorial</a>
-        <a href="factors.html" target="_blank">factors</a>
-        <a href="dateformate.html" target="_blank">Date formate</a>
-        <a href="largest.html" target="_blank">Largest Number</a>
-        <a href="palindrome.html" target="_blank">Palindrome</a>
-        <a href="armstrong.html" target="_blank">Armstrong </a>
-        <a href="js_api/index.html" target="_blank">Call API </a>
+        <h2>Part 1 - Basic</h2>
+        <a href="basic/basic.html" target="_blank">Basic</a>
+        <h2>Part 2 - String</h2>
+        <a href="string/string.html" target="_blank">String</a>
+        <h2>Part 3 - Loop</h2>
+        <a href="loop/loop.html" target="_blank">Loop</a>
+        
     </div>
 
 </body>
