--- a/string/Char_At_Given.html
+++ b/string/Char_At_Given.html
@@ -30,7 +30,7 @@
         if (isNaN(index)) {
           document.getElementById("result").textContent =
             "Please enter a valid index.";
-          // result.style.color = "red"
+            result.style.color = "red"
           return;
         }
 
